@@ -840,14 +840,15 @@ postamble
 /* read postamble from dvi and write in dtl */
 /* return number of bytes */
 {
-  U4 p, num, den, mag, l, u, s, t;
+  S4 p;
+  U4 num, den, mag, l, u, s, t;
 
   fprintf (dtl, "post");
 
   /* p[4] = pointer to final bop */
   fprintf (dtl, " ");
-  p = runsigned (4, dvi);
-  fprintf (dtl, UF4, p);
+  p = rsigned (4, dvi);
+  fprintf (dtl, SF4, p);
 
   /* num[4] = numerator of DVI unit */
   fprintf (dtl, " ");
@@ -901,7 +902,8 @@ postpost
 /* read post_post from dvi and write in dtl */
 /* return number of bytes */
 {
-  U4 q, id;
+  S4 q;
+  U4 id;
   int b223;  /* hope this is 8-bit clean */
   int n223;  /* number of "223" bytes in final padding */
 
@@ -909,8 +911,8 @@ postpost
 
   /* q[4] = pointer to post command */
   fprintf (dtl, " ");
-  q = runsigned (4, dvi);
-  fprintf (dtl, UF4, q);
+  q = rsigned (4, dvi);
+  fprintf (dtl, SF4, q);
 
   /* i[1] = DVI identification byte */
   fprintf (dtl, " ");
